[package]
name = "offchain-client"
version = "0.0.1"
authors = ["Ideal Labs <driemworks@idealabs.network>"]
license = "Apache-2.0"
description = "An offchain client to serve files for ingestion and ejection to Iris"
homepage = "https://idealabs.network"
repository = "https://github.com/ideal-lab5/offchain-client"
readme = "README.md"
edition = "2021"

[dependencies]
bytes = "0.4.12"
clap = "2.33.0"
comrak = "0.6.2"
derive_more = "0.15.0"
env_logger = "0.6.2"
futures-preview = "0.3.0-alpha.19"
handlebars = "1.1.0"
http = "0.1.19"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.102", features = ["derive"] }
tokio = "0.2.0-alpha.6"
tokio-fs = "0.2.0-alpha.6"
structopt = "0.2.18"
